trying to fix scrolly on mobile

--- a/src/css/story/clothes.styl
+++ b/src/css/story/clothes.styl
@@ -48,9 +48,11 @@
     justify-content: center;
     position -webkit-sticky
     position sticky
-    top 25%
+    top 0
     bottom auto
     transform translate3d(0, 0, 0)
+    +mq('bp-6')
+      top 25%
 
     .clothes__all
       margin 0 auto
@@ -165,12 +167,14 @@
         font-family $national
         font-size 14px
         text-transform uppercase
-        margin 0.5rem 0 2rem 0
+        margin 0.5rem 0 0.5rem 0
         opacity 0
         transition 300ms ease-in-out;
         &.is-visible
           opacity 1
           transition 300ms ease-in-out
+        +mq('bp-6')
+          margin 0.5rem 0 2rem 0
 
         span
           margin 0 0.25rem
